removed npe warnings